@@ -1,30 +1,22 @@
 package com.putoet.day24;
 
 import com.putoet.grid.Grid;
-import com.putoet.grid.GridUtils;
 import com.putoet.grid.Point;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class Eris {
+record Eris(@NotNull Grid grid) {
     public static final char BUG = '#';
     public static final char EMPTY = '.';
 
     public static final List<Point> NEIGHBOURS = List.of(Point.NORTH, Point.EAST, Point.SOUTH, Point.WEST);
-    private final Grid grid;
-
-    public Eris(Grid grid) {
-        assert grid != null;
-
-        this.grid = grid;
-    }
 
     public Eris evolve() {
-        final Grid evolve = grid.copy();
-        for (int y = 0; y < grid.maxY(); y++) {
-            for (int x = 0; x < grid.maxX(); x++) {
-                final Point current = Point.of(x, y);
+        final var evolve = grid.copy();
+        for (var y = 0; y < grid.maxY(); y++) {
+            for (var x = 0; x < grid.maxX(); x++) {
+                final var current = Point.of(x, y);
                 final long adjacentBugCount = adjacentBugCount(current);
 
                 if (grid.get(x, y) == BUG)
@@ -38,7 +30,7 @@ public class Eris {
     }
 
     private long adjacentBugCount(Point current) {
-        final List<Point> adjacent = NEIGHBOURS.stream().map(current::add).collect(Collectors.toList());
+        var adjacent = NEIGHBOURS.stream().map(current::add).toList();
         return adjacent.stream()
                 .filter(p -> grid.contains(p.x(), p.y()))
                 .filter(p -> grid.get(p.x(), p.y()) == BUG)
@@ -46,22 +38,16 @@ public class Eris {
     }
 
     public long biodiversityRating() {
-        long biodiversityRating = 0;
+        var biodiversityRating = 0L;
 
-        for (int y = 0; y < grid.maxY(); y++) {
-            for (int x = 0; x < grid.maxX(); x++) {
+        for (var y = 0; y < grid.maxY(); y++) {
+            for (var x = 0; x < grid.maxX(); x++) {
                 if (grid.get(x, y) == BUG)
-                    biodiversityRating += Math.pow(2, y * grid.maxY() + x);
+                    biodiversityRating += (long) Math.pow(2, y * grid.maxY() + x);
             }
         }
 
         return biodiversityRating;
-    }
-
-    protected boolean equals(char[][] other) {
-        assert other != null;
-
-        return GridUtils.gridEquals(grid.grid(), other);
     }
 
     @Override
